Fix layout issues

--- a/frontend/src/components/Organisms/KanbanView/KanbanView.module.css
+++ b/frontend/src/components/Organisms/KanbanView/KanbanView.module.css
@@ -1,8 +1,8 @@
 .columnsWrapper {
-    height: 100%;
-    width: 80%;
-    display: flex;
-    gap: 15px;
-    justify-content: center;
-    padding: 1% 0 0 4%;
-  }
+  /* height: 100%; */
+  width: 95%;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  padding: 1% 0 0 2%;
+}
