--- a/frontend/src/components/Organisms/SideNavigation/SideNavigation.module.css
+++ b/frontend/src/components/Organisms/SideNavigation/SideNavigation.module.css
@@ -20,7 +20,6 @@
 }
 
 .btnsWrapper {
-  height: 90vh;
   padding: 50px 20px;
   display: flex;
   flex-direction: column;
