--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,11 +32,11 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex;
+  place-items: center; */
   min-width: 320px;
-  min-height: 100vh;
-  overflow: hidden;
+  /* min-height: 100vh; */
+  /* overflow: hidden; */
 }
 
 h1 {
